src/tests/fixtures/unions/UnionAsMemberOfItself.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class SomeType {
  /** @gqlField */
  me: Actor;
}

/** @gqlType */
class User {
  __typename = "User";
  /** @gqlField */
  name: string;
}

/** @gqlType */
class Entity {
  __typename = "Entity";
  /** @gqlField */
  description: string;
}

/** @gqlUnion */
type Actor = User | Entity | Actor;

-----------------
OUTPUT
-----------------
src/tests/fixtures/unions/UnionAsMemberOfItself.invalid.ts:9:16 - error: Expected `__typename` property initializer to be an expression with a const assertion. For example: `__typename = "User" as const`. This lets Grats know that the GraphQL executor will be able to derive the type of the object at runtime.

9   __typename = "User";
                 ~~~~~~
src/tests/fixtures/unions/UnionAsMemberOfItself.invalid.ts:16:16 - error: Expected `__typename` property initializer to be an expression with a const assertion. For example: `__typename = "Entity" as const`. This lets Grats know that the GraphQL executor will be able to derive the type of the object at runtime.

16   __typename = "Entity";
                  ~~~~~~~~
